Add basic support for GraalVM native image