@@ -9,6 +9,7 @@ plugins {
 	application
 	`maven-publish`
 	signing
+	id("org.graalvm.buildtools.native") version "0.11.3"
 	id("com.github.ben-manes.versions") version "0.53.0"
 }
 
@@ -177,6 +178,35 @@ tasks.distTar {
 
 tasks.distZip {
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+graalvmNative {
+//	toolchainDetection = true // only works reliably if a single JDK is installed, which is GraalVM
+	agent {
+//		enabled = true
+		defaultMode = "standard"
+	}
+	binaries {
+		named("main") {
+//			verbose = true
+			sharedLibrary = false
+			mainClass.set("io.calimero.tools.Main")
+			buildArgs.addAll(
+				listOf(
+					"--enable-sbom=export",
+					"--future-defaults=all",
+					"--emit build-report",
+					"--initialize-at-build-time",
+					"--no-fallback",
+					"-march=native",
+					"-Os",
+					"--exact-reachability-metadata",
+					"-H:-ReportExceptionStackTraces",
+				)
+			)
+			jvmArgs.add("--enable-native-access=ALL-UNNAMED")
+		}
+	}
 }
 
 publishing {
